# gogogo

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  README.md
engine/include/: go_engine.hpp
engine/src/: go_engine.cpp
engine/test/: CMakeLists.txt  go_engine_test.cpp
src/: main.cpp
